--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -73,9 +73,9 @@
       </div>
 
       <main class="components-doc-container">
-        <!-- alert component -->
+        <!-- Alert component -->
         <div class="component-wrapper">
-          <div class="comp-heading margin-bottom">Avatar</div>
+          <div class="comp-heading margin-bottom">Alert</div>
           <div class="heading-discription margin-bottom line-height">
             An alert displays a short, important message in a way that attracts
             the user's attention without interrupting the user's task.
@@ -91,7 +91,7 @@
           </div>
 
           <div class="component-container position margin-bottom">
-            <div class="wrapper">
+            <div class="wrapper-alert">
               <div class="alert alert-error">
                 <span class="icon"
                   ><i class="fas fa-exclamation-circle"></i
