style : add font family and erase extra code in card

--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -59,7 +59,7 @@
           <div class="list-subtopics">
             <ul>
               <li class="item-lists"><a href="#">Avatar</a></li>
-              <li class="item-lists"><a href="#">Alert</a></li>
+              <li class="item-lists"><a href="#alert">Alert</a></li>
               <li class="item-lists"><a href="#">Button</a></li>
               <li class="item-lists"><a href="#">Badge</a></li>
               <li class="item-lists"><a href="#">Card</a></li>
