add link of doc. page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="navbar">
           <div class="landing-name">Nebula</div>
           <div class="landing-icons">
-            <span class="landing-icons"><a class="landing-link" href="#">Docs</a></span>
+            <span class="landing-icons"><a class="landing-link" href="/Documentation/docs.html">Docs</a></span>
             <span class="landing-icons"
               ><i class="fab fa-github"><a class="landing-link" href="https://github.com/Jay-Gadhiya/nebula-ui"></a></i
             ></span>
@@ -37,7 +37,7 @@
             layouts using pre-made components in html and css.
           </div>
           <div class="call-to-action-button">
-            <button class="btn btn-primary">Get Started</button>
+            <button class="btn btn-primary"><a href="/Documentation/docs.html">Get Started</a></button>
           </div>
         </div>
         <div class="landing-image">
