--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -94,26 +94,26 @@
           <div class="component-container position margin-bottom">
             <div class="wrapper-alert">
               <div class="alert alert-error">
-                <span class="icon"
+                <span class="icon-alert"
                   ><i class="fas fa-exclamation-circle"></i
                 ></span>
                 <span>This is an error alert — check it out!</span>
               </div>
 
               <div class="alert alert-warning">
-                <span class="icon"
+                <span class="icon-alert"
                   ><i class="fas fa-exclamation-triangle"></i
                 ></span>
                 <span>This is a warning alert — check it out!</span>
               </div>
 
               <div class="alert alert-info">
-                <span class="icon"><i class="fas fa-info-circle"></i></span>
+                <span class="icon-alert"><i class="fas fa-info-circle"></i></span>
                 <span>This is an info alert — check it out!</span>
               </div>
 
               <div class="alert alert-success">
-                <span class="icon"><i class="far fa-check-circle"></i></span>
+                <span class="icon-alert"><i class="far fa-check-circle"></i></span>
                 <span>This is a success alert — check it out!</span>
               </div>
             </div>
