add link of index page in heading name

--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -15,10 +15,10 @@
     <!-- Navbar -->
     <nav class="navbar-wrapper">
       <div class="navbar">
-        <div class="landing-name">Nebula</div>
+        <div class="landing-name"><a class="landing-link" href="/index.html">Nebula</a></div>
         <div class="landing-icons">
           <span class="landing-icons"
-            ><a class="landing-link" href="#">Docs</a></span
+            ><a . href="#">Docs</a></span
           >
           <span class="landing-icons"
             ><i class="fab fa-github"
