style : add installation link

--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -18,7 +18,7 @@
         <div class="landing-name"><a class="landing-link" href="/index.html">Nebula</a></div>
         <div class="landing-icons">
           <span class="landing-icons"
-            ><a . href="#">Docs</a></span
+            ><a href="#">Docs</a></span
           >
           <span class="landing-icons"
             ><i class="fab fa-github"
@@ -95,11 +95,9 @@
           </div>
     
           <div class="code-container">
-            <iframe
-            class="iframe-length"
-            src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=seti&wt=sharp&l=auto&width=584&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14.5px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fnebulaui.netlify.app%252FCSS%252Fglobal.css%2522%253E"
-            sandbox="allow-scripts allow-same-origin">
-          </iframe>
+            <code>
+              <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FJay-Gadhiya%2Fnebula-ui%2Fblob%2Fdev%2Findex.html%23L11&style=agate&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            </code>
           </div>
 
           <div class="separator"></div>
