--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -17,23 +17,9 @@
       <div class="navbar">
         <div class="landing-name"><a class="landing-link" href="/index.html">Nebula</a></div>
         <div class="landing-icons">
-          <span class="landing-icons"
-            ><a href="#">Docs</a></span
-          >
-          <span class="landing-icons"
-            ><i class="fab fa-github"
-              ><a
-                class="landing-link"
-                href="https://github.com/Jay-Gadhiya/nebula-ui"
-              ></a></i
-          ></span>
-          <span class="landing-icons"
-            ><i class="fab fa-twitter"
-              ><a
-                class="landing-link"
-                href="https://twitter.com/JayGadhiya7"
-              ></a></i
-          ></span>
+          <span class="landing-icons"><a class="landing-link" href="#">Docs</a></span>
+          <span class="landing-icons"><a class="landing-link" href="https://github.com/Jay-Gadhiya/nebula-ui"><i class="fab fa-github"></i></a></span>
+            <span class="landing-icons"><a class="landing-link" href="https://twitter.com/JayGadhiya7"><i class="fab fa-twitter"></i></a></span>
         </div>
       </div>
     </nav>
