--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
   <body>
       <nav class="navbar-wrapper">
         <div class="navbar">
-          <div class="landing-name">Nebula</div>
+          <div class="landing-name landing-link">Nebula</div>
           <div class="landing-icons">
             <span class="landing-icons"><a class="landing-link" href="/Documentation/docs.html">Docs</a></span>
-            <span class="landing-icons"
-              ><i class="fab fa-github"><a class="landing-link" href="https://github.com/Jay-Gadhiya/nebula-ui"></a></i
-            ></span>
-            <span class="landing-icons"
-              ><i class="fab fa-twitter"><a class="landing-link" href="https://twitter.com/JayGadhiya7"></a></i
-            ></span>
+            <span class="landing-icons"><a class="landing-link" href="https://github.com/Jay-Gadhiya/nebula-ui"><i class="fab fa-github"></i></a></span>
+            <span class="landing-icons"><a class="landing-link" href="https://twitter.com/JayGadhiya7"><i class="fab fa-twitter"></i></a></span>
           </div>
         </div>
       </nav>
