--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar-wrapper">
       <div class="navbar">
-        <div class="landing-name"><a class="landing-link" href="/index.html">Nebula</a></div>
+        <div class="landing-name"><a class="landing-link name-media-change" href="/index.html">Nebula</a></div>
         <div class="landing-icons">
           <span class="landing-icons"><a class="landing-link" href="#">Docs</a></span>
           <span class="landing-icons"><a class="landing-link" href="https://github.com/Jay-Gadhiya/nebula-ui"><i class="fab fa-github"></i></a></span>
