--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -1594,6 +1594,14 @@
       </main>
     </main>
 
-    <script src="/components/cards/card.js"></script>
+
+    <!-- Cscroll up button -->
+
+    <button class="btn btn-primary btn-floating btn-position js-float-up">
+      <a href="/Documentation/docs.html#introduction">
+      <span class="icon-btn"><i class="fas fa-arrow-up"></i></span>
+      </a>
+    </button>
+    
   </body>
 </html>
