style : make float up button responsive

--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -1602,6 +1602,7 @@
       <span class="icon-btn"><i class="fas fa-arrow-up"></i></span>
       </a>
     </button>
-    
+
+    <script src="/components/cards/card.js"></script>
   </body>
 </html>
