--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -1598,7 +1598,7 @@
     <!-- Cscroll up button -->
 
     <button class="btn btn-primary btn-floating btn-position js-float-up">
-      <a href="/Documentation/docs.html#introduction">
+      <a href="#introduction">
       <span class="icon-btn"><i class="fas fa-arrow-up"></i></span>
       </a>
     </button>
