--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -82,7 +82,7 @@
     
           <div class="code-container">
             <code>
-              <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FJay-Gadhiya%2Fnebula-ui%2Fblob%2Fdev%2Findex.html%23L11&style=agate&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+              <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FJay-Gadhiya%2Fnebula-ui%2Fblob%2Fdev%2FDocumentation%2Fdocs.html%23L7-L11&style=agate&showBorder=on&showLineNumbers=on&showCopy=on&fetchFromJsDelivr=on"></script>
             </code>
           </div>
 
