--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -8,6 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
+    <link rel="stylesheet" href="/CSS/global.css" />
+    
     <link rel="stylesheet" href="/Documentation/docs.css" />
     <title>Document</title>
   </head>
