fix : correct instqfallation link

--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -84,7 +84,7 @@
     
           <div class="code-container">
             <code>
-              <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FJay-Gadhiya%2FLINK-NEBULA%2Fblob%2Fmaster%2Findex.html%23L7-L8&style=agate&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+              <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FJay-Gadhiya%2FLINK-NEBULA-UI%2Fblob%2Fmaster%2Findex.html%23L7-L8&style=agate&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
             </code>
           </div>
 
