--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
     <link rel="stylesheet" href="/style.css"/>
-    <title>landing page</title>
+    <title>Nebula UI</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.jpeg">
   </head>
   <body>
       <nav class="navbar-wrapper">
