--- a/Documentation/docs.html
+++ b/Documentation/docs.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="/CSS/global.css" />
     
     <link rel="stylesheet" href="/Documentation/docs.css" />
-    <title>Document</title>
+    <title>Nebula UI</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.jpeg">
   </head>
   <body>
     <!-- Navbar -->
